Added Machine Learning section

--- a/glossary.tex
+++ b/glossary.tex
@@ -35,5 +35,9 @@
 \newacronym{tSNE}{tSNE}{t-distribuované stochastické vkládání sousedů (t-distributed Stochastic Neighbor Embedding)}
 \newacronym{UMAP}{UMAP}{Uniform Manifold Approximation and Projection}
 \newacronym{EFA}{EFA}{Faktorová analýza (Exploratory Factor Analysis)}
-\newacronym{DBSCAN}{DBSCAN}{Hustotní prostorové shlukování aplikací s hlukem (Density-Based Spatial Clustering of Applications with Noise)}
+\newacronym{DBSCAN}{DBSCAN}{Hustotní prostorové shlukování aplikací s šumem (Density-Based Spatial Clustering of Applications with Noise)}
 \newacronym{HDBSCAN}{HDBSCAN}{Hierarchické hustotní prostorové shlukování aplikací s hlukem (Hierarchical Density-Based Spatial Clustering of Applications with Noise)}
+\newacronym{ML}{ML}{Strojové učení (Machine Learning)}
+\newacronym{CV}{CV}{Křížová validace (Cross-Validation)}
+\newacronym{ANN}{ANN}{Umělé neuronové sítě (Artificial Neural Networks)}
+\newacronym{GD}{GD}{Gradientní sestup (Gradient descent)}
