--- a/glossary.tex
+++ b/glossary.tex
@@ -3,11 +3,11 @@
 % \glsxtrnewsymbol[description={the set no elements},unit={\si{m}}]{empty}{\ensuremath{\emptyset}}
 
 % Acronyms
-\newacronym{HRV}{HRV}{Variabilita srdeční frekvence (Heart Rate Variability)}
+\newacronym{HRV}{HRV}{Variabilita srdeční frekvence (Heart rate variability)}
 \newacronym{NPF}{NPF}{Neuropsychofyziologie}
-\newacronym{CL}{CL}{Kognitivní zátěž (Cognitive Load)}
+\newacronym{CL}{CL}{Kognitivní zátěž (Cognitive load)}
 \newacronym{LEO}{LEO}{Nízká oběžná dráha (Low-earth orbit)}
-\newacronym{ICE}{ICE}{Izolované, stísněné a extrémní prostředí (Isolated, Confined and Extreme environment}
+\newacronym{ICE}{ICE}{Izolované, stísněné a extrémní prostředí (Isolated, confined and extreme environment}
 \newacronym{ESA}{ESA}{Evropská kosmická agentura (European Space Agency)}
 \newacronym{NASA}{NASA}{Americký Národní úřad pro letectví a vesmír (National Aeronautics and Space Administration)}
 \newacronym{fMRI}{fMRI}{Funkční magnetická rezonance}
@@ -21,23 +21,48 @@
 \newacronym{AURL}{AURL}{Podmořská Výzkumná Laboratoř (Aquarius Undersea Research Laboratory)}
 \newacronym{CNS}{CNS}{Centrální nervová soustava}
 \newacronym{MRI}{MRI}{Magnetická rezonance}
-\newacronym{HDBR}{HDBR}{Head--Down Bed Rest}
+\newacronym{HDBR}{HDBR}{Head--down bed rest}
 \newacronym{TPJ}{TPJ}{Temporoparietální spojení}
-\newacronym{CLT}{CLT}{Teorie kognitivní zátěže (Cognitive Load Theory)}
+\newacronym{CLT}{CLT}{Teorie kognitivní zátěže (Cognitive load theory)}
 \newacronym{EEG}{EEG}{Elektroencefalografie}
-\newacronym{SWT}{SWT}{Stacionární vlnková transformace (Stationary Wavelet Transform)}
-\newacronym{ZC}{ZC}{Průchod nuly (Zero Crossing)}
-\newacronym{SCR}{SCR}{Odezva kožní vodivosti (Skin Conductance Response)}
-\newacronym{RMSSD}{RMSSD}{Odmocnina průměru umocněných rozdílů po sobě jdoucích N--N intervalů (Root Mean Square of the Successive Differences)}
+\newacronym{SWT}{SWT}{Stacionární vlnková transformace (Stationary wavelet transform)}
+\newacronym{ZC}{ZC}{Průchod nuly (Zero crossing)}
+\newacronym{SCL}{SCL}{Úroveň kožní vodivosti (Skin conductance level)}
+\newacronym{SCR}{SCR}{Odezva kožní vodivosti (Skin conductance response)}
+\newacronym{RMSSD}{RMSSD}{Odmocnina průměru umocněných rozdílů po sobě jdoucích N--N intervalů (Root mean square of the successive differences)}
 \newacronym{pNNX0}{pNNX0}{Poměr NNX0 k počtu všech N--N intervalů (Proportion of NNX0 divided by the total number of N--N)}
 \newacronym{NNX0}{NNX0}{Počet párů sousedních N--N intervalů, které se od sebe liší o více než Xms (Number of times successive heartbeat intervals exceed Xms)}
-\newacronym{PCA}{PCA}{Analýza hlavních komponent (Principal Component Analysis)}
-\newacronym{tSNE}{tSNE}{t-distribuované stochastické vkládání sousedů (t-distributed Stochastic Neighbor Embedding)}
+\newacronym{PCA}{PCA}{Analýza hlavních komponent (Principal component analysis)}
+\newacronym{tSNE}{tSNE}{t-distribuované stochastické vkládání sousedů (t-distributed stochastic neighbor embedding)}
 \newacronym{UMAP}{UMAP}{Uniform Manifold Approximation and Projection}
-\newacronym{EFA}{EFA}{Faktorová analýza (Exploratory Factor Analysis)}
-\newacronym{DBSCAN}{DBSCAN}{Hustotní prostorové shlukování aplikací s šumem (Density-Based Spatial Clustering of Applications with Noise)}
-\newacronym{HDBSCAN}{HDBSCAN}{Hierarchické hustotní prostorové shlukování aplikací s hlukem (Hierarchical Density-Based Spatial Clustering of Applications with Noise)}
-\newacronym{ML}{ML}{Strojové učení (Machine Learning)}
-\newacronym{CV}{CV}{Křížová validace (Cross-Validation)}
-\newacronym{ANN}{ANN}{Umělé neuronové sítě (Artificial Neural Networks)}
+\newacronym{EFA}{EFA}{Faktorová analýza (Exploratory factor analysis)}
+\newacronym{DBSCAN}{DBSCAN}{Hustotní prostorové shlukování aplikací s šumem (Density-based spatial clustering of applications with noise)}
+\newacronym{HDBSCAN}{HDBSCAN}{Hierarchické hustotní prostorové shlukování aplikací s hlukem (Hierarchical density-based spatial clustering of applications with noise)}
+\newacronym{ML}{ML}{Strojové učení (Machine learning)}
+\newacronym{CV}{CV}{Křížová validace (Cross-validation)}
+\newacronym{ANN}{ANN}{Umělé neuronové sítě (Artificial neural networks)}
 \newacronym{GD}{GD}{Gradientní sestup (Gradient descent)}
+\newacronym{DT}{DT}{rozhodovací stromy (Decision trees)}
+\newacronym{LDA}{LDA}{Gradientní sestup (Linear discriminant analysis )}
+\newacronym{SVM}{SVM}{Gradientní sestup (Support vector machines)}
+\newacronym{SOM}{SOM}{Samoorganizující mapy (Self organizing maps)}
+\newacronym{NTS}{NTS}{Jádro solitárního traktu (Nucleus tractus solitarius)}
+\newacronym{CeA}{CeA}{Centrální jádro amygdaly (Nucleus amygdalae centralis)}
+\newacronym{RVLM}{RVLM}{Rostrální ventrolaterální medulární jádro (Rostral ventrolateral medullary)}
+\newacronym{NA}{NA}{Somatomotorické jádro pro n. IX a X. (Nucleus ambiguus)}
+\newacronym{DVN}{DVN}{Dorzální vagové motorické jádro (Nucleus dorsalis nervi vagi)}
+\newacronym{CVLM}{CVLM}{Kaudální ventrolaterální medulární jádro (Caudal ventrolateral medullary)}
+\newacronym{IML}{IML}{Visceromotorická jádra v segmentech C7--L2 (Nucleus intermediolateralis)}
+\newacronym{pACC}{pACC}{Pregenuální přední cingulární kůra (Pregenual anterior cingulate cortex)}
+\newacronym{dACC}{dACC}{Dorzální anteriorní cingulární kůra (Dorsal anterior cingulate cortex)}
+\newacronym{pCC}{pCC}{Posteriorní cingulární kůra (Posterior cingulate cortex)}
+\newacronym{mPFC}{mPFC}{Mediální prefrontální kůra (Medial prefrontal cortex)}
+\newacronym{NVI}{NVI}{Neuroviscerální integrace (Neurovisceral integration)}
+\newacronym{CAN}{CAN}{Centrální autonomní síť (Central autonomic network)}
+\newacronym{ANS}{ANS}{Autonomní nervová soustava (Autonomic nervous system)}
+\newacronym{HR}{HR}{Srdeční rytmus (Heart rate)}
+\newacronym{SA}{SA}{Sinoatriální uzel}
+\newacronym{AV}{AV}{Atrioventrikulární uzel}
+\newacronym{PPG}{PPG}{Fotopletysmografie (Photoplethysmography)}
+\newacronym{SNS}{SNS}{Sympatický nervový systém}
+\newacronym{PNS}{PNS}{Parasympatický nervový systém}
