--- a/glossary.tex
+++ b/glossary.tex
@@ -66,3 +66,5 @@
 \newacronym{PPG}{PPG}{Fotopletysmografie (Photoplethysmography)}
 \newacronym{SNS}{SNS}{Sympatický nervový systém}
 \newacronym{PNS}{PNS}{Parasympatický nervový systém}
+\newacronym{FF UPOL}{FF UPOL}{Filozofická fakulta Univerzity Palackého v Olomouci}
+\newacronym{EFPA}{EFPA}{Evropská federace psychologických asociací}
