--- a/main.tex
+++ b/main.tex
@@ -217,9 +217,9 @@
 % Declaration
 \null\vfill
 \section*{Prohlášení}
-Prohlašuji, že jsem bakalářskou práci s názvem \uv{\nazev} vypracoval/a
+Prohlašuji, že jsem diplomovou práci s názvem \uv{\nazev} vypracoval/a
 samostatně a~použil/a k~tomu úplný výčet citací použitých pramenů, které uvádím
-v seznamu přiloženém k~bakalářské práci.
+v seznamu přiloženém k~diplomové práci.
 
 \hspace{-0.75cm}Nemám závažný důvod proti užití tohoto školního díla ve smyslu
 \S 60 Zákona č.121/2000~Sb., o~právu autorském, o~právech souvisejících s právem
