--- a/glossary.tex
+++ b/glossary.tex
@@ -68,3 +68,10 @@
 \newacronym{PNS}{PNS}{Parasympatický nervový systém}
 \newacronym{FF UPOL}{FF UPOL}{Filozofická fakulta Univerzity Palackého v Olomouci}
 \newacronym{EFPA}{EFPA}{Evropská federace psychologických asociací}
+\newacronym{BOREC}{BOREC}{Body recorded}
+\newacronym{FBMI}{FBMI}{Fakulta biomedicínského inženýrství}
+\newacronym{LMM}{LMM}{Linearní smíšené modely (Linear mixed models)}
+\newacronym{GC}{GC}{Grangerova kauzalita (Granger causality)}
+\newacronym{CP}{CP}{Capula Granger}
+\newacronym{GAF}{GAF}{Gramian angular fields}
+\newacronym{GADF}{GADF}{Gramian angular difference fields}
