--- a/library.bib
+++ b/library.bib
@@ -961,35 +961,33 @@
   year      = {1991}
 }
 
- @article{Wang2019,
-  abstractnote = {Cognitive load condition is of great significance for judging learners’ learning state and improving the learning and teaching effects. This paper proposed a feature fusion based processing framework for high cognitive load detection, which includes heart rate variability (HRV) and pulse rate variability (PRV) acquisition, data preprocessing, feature extraction, feature selection, feature fusion by linear feature dependency modeling (LFDM) and high cognitive load detection by XGBoost classifier. This paper experiment on simulated learning paradigm, and the experimental results show that the proposed framework for detection of high cognitive load outperforms conventional processing approaches that uses HRV or PRV only. This paper compared the effects of using different feature fusion algorithms (PCT, SKRRR, ADMM, LFDM) and different classification algorithms (KNN, SVM, DT, RF, XGBoost), and the final proposed framework outperforms other schemes. The proposed framework achieves approximately 97.2% accuracy of high cognitive load detection.},
-  author       = {Wang, Chixiang and Guo, Junqi},
-  collection   = {2018 International Conference on Identification, Information and Knowledge in the Internet of Things},
-  doi          = {10.1016/j.procs.2019.01.234},
-  issn         = {1877-0509},
-  journal      = {Procedia Computer Science},
-  language     = {en},
-  month        = {Jan},
-  pages        = {338–348},
-  series       = {2018 International Conference on Identification, Information and Knowledge in the Internet of Things},
-  title        = {A data-driven framework for learners’ cognitive load detection using ECG-PPG physiological feature fusion and XGBoost classification},
-  volume       = {147},
-  year         = {2019}
+@article{Wang2019,
+  author     = {Wang, Chixiang and Guo, Junqi},
+  collection = {2018 International Conference on Identification, Information and Knowledge in the Internet of Things},
+  doi        = {10.1016/j.procs.2019.01.234},
+  issn       = {1877-0509},
+  journal    = {Procedia Computer Science},
+  language   = {en},
+  month      = {Jan},
+  pages      = {338–348},
+  series     = {2018 International Conference on Identification, Information and Knowledge in the Internet of Things},
+  title      = {A data-driven framework for learners’ cognitive load detection using ECG-PPG physiological feature fusion and XGBoost classification},
+  volume     = {147},
+  year       = {2019}
 }
 
- @article{Schnotz2007,
-  abstractnote = {Cognitive load theory has been very influential in educational psychology during the last decade in providing guidelines for instructional design. Whereas numerous empirical studies have used it as a theoretical framework, a closer analysis reveals some fundamental conceptual problems within the theory. Various generalizations of empirical findings become questionable because the theory allows different and contradicting possibilities to explain some empirical results. The article investigates these theoretical problems by analyzing the conceptual distinctions between different kinds of cognitive load. It emphasizes that reduction of cognitive load can sometimes impair learning rather than enhancing it. Cognitive load theory is reconsidered both from the perspective of Vygotski’s concept of the zone of proximal development and from the perspective of research on implicit learning. Task performance and learning are considered as related, but nevertheless fundamentally different processes. Conclusions are drawn for the further development of the theory as well as for empirical research and instructional practice.},
-  author       = {Schnotz, Wolfgang and Kürschner, Christian},
-  doi          = {10.1007/s10648-007-9053-4},
-  issn         = {1573-336X},
-  journal      = {Educational Psychology Review},
-  language     = {en},
-  month        = {Dec},
-  number       = {4},
-  pages        = {469–508},
-  title        = {A Reconsideration of Cognitive Load Theory},
-  volume       = {19},
-  year         = {2007}
+@article{Schnotz2007,
+  author   = {Schnotz, Wolfgang and Kürschner, Christian},
+  doi      = {10.1007/s10648-007-9053-4},
+  issn     = {1573-336X},
+  journal  = {Educational Psychology Review},
+  language = {en},
+  month    = {Dec},
+  number   = {4},
+  pages    = {469–508},
+  title    = {A Reconsideration of Cognitive Load Theory},
+  volume   = {19},
+  year     = {2007}
 }
 
 @article{Sandra2006,
@@ -1414,7 +1412,7 @@
   year      = 2009
 }
 
- @article{Raichle2001,
+@article{Raichle2001,
   author    = {Raichle, Marcus E. and MacLeod, Ann Mary and Snyder, Abraham Z. and Powers, William J. and Gusnard, Debra A. and Shulman, Gordon L.},
   doi       = {10.1073/pnas.98.2.676},
   journal   = {Proceedings of the National Academy of Sciences},
@@ -1427,7 +1425,7 @@
   year      = {2001}
 }
 
- @article{Nagai2004,
+@article{Nagai2004,
   author  = {Nagai, Y and Critchley, H. D and Featherstone, E and Trimble, M. R and Dolan, R. J},
   doi     = {10.1016/j.neuroimage.2004.01.019},
   issn    = {1053-8119},
@@ -1440,7 +1438,7 @@
   year    = {2004}
 }
 
- @article{Shaffer2014,
+@article{Shaffer2014,
   author  = {Shaffer, Fred and McCraty, Rollin and Zerr, Christopher L},
   doi     = {10.3389/fpsyg.2014.01040},
   issn    = {1664-1078},
@@ -1457,7 +1455,7 @@
 %!   HRV
 %!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
- @article{Lujan2021,
+@article{Lujan2021,
   author  = {Lujan, Matthew R. and Perez-Pozuelo, Ignacio and Grandner, Michael A.},
   issn    = {2673-253X},
   journal = {Frontiers in Digital Health},
@@ -2455,10 +2453,24 @@
   year       = {2010}
 }
 
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%!   METODY
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%   !DATASETS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%!  Mise DIANA
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@unpublished{modbus,
+  address = {U.S.A, North Andover, Massachusetts},
+  title   = {Modicon Modbus Protocol Reference Guide},
+  url     = {https://modbus.org/docs/PI_MBUS_300.pdf},
+  year    = {1996}
+}
+
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%!  Pouzite datasety
+%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @inproceedings{clasDataset,
   author    = {Markova, Valentina and Ganchev, Todor and Kalinkov, Kalin},
@@ -2491,22 +2503,188 @@
   year      = {2018}
 }
 
-@inproceedings{mmodcogDataset,
-  author    = {Mijić, Igor and Šarlija, Marko and Petrinović, Davor},
-  booktitle = {2019 11th International Symposium on Image and Signal Processing and Analysis (ISPA)},
-  doi       = {10.1109/ISPA.2019.8868678},
+@inproceedings{kalidas2017,
+  author    = {Kalidas, Vignesh and Tamil, Lakshman},
+  booktitle = {2017 IEEE 17th International Conference on Bioinformatics and Bioengineering (BIBE)},
+  doi       = {10.1109/BIBE.2017.00-12},
   number    = {},
-  pages     = {15-20},
-  title     = {MMOD-COG: A Database for Multimodal Cognitive Load Classification},
-  url       = {https://ieeexplore.ieee.org/document/8868678},
+  pages     = {457-461},
+  title     = {Real-time QRS detector using Stationary Wavelet Transform for Automated ECG Analysis},
+  url       = {https://ieeexplore.ieee.org/document/8251332},
   urldate   = {2021-06-18},
   volume    = {},
-  year      = {2019}
+  year      = {2017}
 }
 
-%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%!   METODY
-%!%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Tompkins1985,
+  author  = {Pan, Jiapu and Tompkins, Willis J.},
+  doi     = {10.1109/TBME.1985.325532},
+  journal = {IEEE Transactions on Biomedical Engineering},
+  number  = {3},
+  pages   = {230-236},
+  title   = {A Real-Time QRS Detection Algorithm},
+  url     = {https://ieeexplore.ieee.org/document/4122029},
+  urldate = {2021-06-24},
+  volume  = {BME-32},
+  year    = {1985}
+}
+
+@inbook{Nason1995,
+  address    = {New York, NY},
+  author     = {Nason, G. P. and Silverman, B. W.},
+  booktitle  = {Wavelets and Statistics},
+  collection = {Lecture Notes in Statistics},
+  doi        = {10.1007/978-1-4612-2544-7_17},
+  editor     = {Antoniadis, Anestis and Oppenheim, Georges},
+  isbn       = {978-1-4612-2544-7},
+  pages      = {281–299},
+  publisher  = {Springer},
+  series     = {Lecture Notes in Statistics},
+  title      = {The Stationary Wavelet Transform and some Statistical Applications},
+  url        = {https://doi.org/10.1007/978-1-4612-2544-7_17},
+  year       = {1995}
+}
+
+@article{PhysioNet,
+  author  = {Goldberger, A. L. and Amaral, L. A. N. and Glass, L. and
+             Hausdorff, J. M. and Ivanov, P. Ch. and Mark, R. G. and
+             Mietus, J. E. and Moody, G. B. and Peng, C.-K. and Stanley, H. E.},
+  journal = {Circulation},
+  month   = {6},
+  note    = {Circulation Electronic Pages:
+             http://circ.ahajournals.org/content/101/23/e215.full
+             PMID:1085218; doi: 10.1161/01.CIR.101.23.e215},
+  number  = {23},
+  pages   = {e215--e220},
+  title   = {{PhysioBank, PhysioToolkit, and PhysioNet}: Components of a New
+             Research Resource for Complex Physiologic Signals},
+  volume  = {101},
+  year    = {2000}
+}
+
+@article{MITBIHArrhythmia,
+  author  = {Moody, G.B. and Mark, R.G.},
+  doi     = {10.1109/51.932724},
+  journal = {IEEE Engineering in Medicine and Biology Magazine},
+  number  = {3},
+  pages   = {45-50},
+  title   = {The impact of the MIT-BIH Arrhythmia Database},
+  urldate = {2021-06-18},
+  volume  = {20},
+  year    = {2001}
+}
+
+@misc{Beth1990,
+  author    = {The Beth Israel Deaconess Medical Center, The Arrhythmia Laboratory},
+  doi       = {10.13026/C2NK5R},
+  publisher = {physionet.org},
+  title     = {The MIT-BIH Normal Sinus Rhythm Database},
+  url       = {https://physionet.org/content/nsrdb/},
+  year      = {1990}
+}
+
+@article{LUDB,
+  author  = {Kalyakulina, Alena and Yusipov, Igor and Moskalenko, Viktor and Nikolskiy, Alexander and Kosonogov, Konstantin and Osipov, Gregory and Zolotykh, Nikolai and Ivanchenko, Mikhail},
+  doi     = {10.1109/ACCESS.2020.3029211},
+  journal = {IEEE Access},
+  month   = {01},
+  pages   = {186181-186190},
+  title   = {LUDB: A New Open-Access Validation Tool for Electrocardiogram Delineation Algorithms},
+  urldate = {2021-06-18},
+  volume  = {8},
+  year    = {2020}
+}
+
+@misc{USYD,
+  author  = {Mehrgardt, P. and Khushi, M. and Poon, S. and Withana, A.},
+  doi     = {10.13026/jpan-6n92},
+  note    = {PhysioNet},
+  title   = {Pulse Transit Time PPG Dataset (version 1.1.0)},
+  url     = {https://doi.org/10.13026/jpan-6n92},
+  urldate = {2021-06-18},
+  year    = {2022}
+}
+
+@misc{IFADO,
+  author  = {Vollmer, M. and Bläsing, D. and Reiser, J. E. and Nisser, M. and Buder, A.},
+  doi     = {10.13026/chd5-t946},
+  note    = {PhysioNet},
+  title   = {Simultaneous physiological measurements with five devices at different cognitive and physical loads (version 1.0.0)},
+  url     = {https://doi.org/10.13026/chd5-t946},
+  urldate = {2021-06-18},
+  year    = {2020}
+}
+
+@misc{GUDB,
+  author  = {Howell, L. and Porr, B.},
+  doi     = {10.5525/gla.researchdata.716},
+  note    = {University of Glasgow},
+  title   = {High precision ECG Database with annotated R peaks, recorded and filmed under realistic conditions},
+  url     = {https://doi.org/10.5525/gla.researchdata.716},
+  urldate = {2021-06-18},
+  year    = {2018}
+}
+
+@article{FANTASIA,
+  author  = {Iyengar, N. and Peng, C. K. and Morin, R. and Goldberger, A. L. and Lipsitz, L. A.},
+  doi     = {10.1152/ajpregu.1996.271.4.R1078},
+  eprint  = {https://doi.org/10.1152/ajpregu.1996.271.4.R1078},
+  journal = {American Journal of Physiology-Regulatory, Integrative and Comparative Physiology},
+  note    = {PMID: 8898003},
+  number  = {4},
+  pages   = {R1078-R1084},
+  title   = {Age-related alterations in the fractal scaling of cardiac interbeat interval dynamics},
+  url     = {https://doi.org/10.1152/ajpregu.1996.271.4.R1078},
+  urldate = {2021-06-18},
+  volume  = {271},
+  year    = {1996}
+}
+
+
+@article{posada2016,
+  author  = {Posada-Quintero, Hugo and Florian, John and Orjuela-Cañón, Alvaro and Corrales, Tomás and Charleston-Villalobos, Sonia and Chon, Kaye},
+  doi     = {10.1007/s10439-016-1606-6},
+  journal = {Annals of Biomedical Engineering},
+  month   = {04},
+  pages   = {},
+  title   = {Power Spectral Density Analysis of Electrodermal Activity for Sympathetic Function Assessment},
+  url     = {https://link.springer.com/article/10.1007/s10439-016-1606-6},
+  urldate = {2021-06-18},
+  volume  = {44},
+  year    = {2016}
+}
+
+@article{vanhalem2020,
+  author  = {Sjoerd van Halem and Eeske van Roekel and Lara Kroencke and Niclas Kuper and Jaap Denissen},
+  doi     = {10.1002/per.2252},
+  eprint  = { https://doi.org/10.1002/per.2252},
+  journal = {European Journal of Personality},
+  number  = {5},
+  pages   = {794-807},
+  title   = {Moments that Matter? On the Complexity of using Triggers Based on Skin Conductance to Sample Arousing Events within an Experience Sampling Framework},
+  url     = {https://doi.org/10.1002/per.2252},
+  urldate = {2021-06-18},
+  volume  = {34},
+  year    = {2020}
+}
+
+@inproceedings{ghiasi2018sympha,
+  author    = {Ghiasi, S and Greco, A and Nardelli, M and Catrambone, V and Barbieri, R and Scilingo, EP and Valenza, G},
+  booktitle = {2018 40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)},
+  doi       = {10.1109/EMBC.2018.8512932},
+  number    = {},
+  pages     = {3068-3071},
+  title     = {A New Sympathovagal Balance Index from Electrodermal Activity and Instantaneous Vagal Dynamics: A Preliminary Cold Pressor Study},
+  url       = {https://ieeexplore.ieee.org/abstract/document/8512932},
+  urldate   = {2021-06-18},
+  volume    = {},
+  year      = {2018}
+}
+
+
+
+
+
 
 @article{tsne2008,
   author  = {Laurens van der Maaten and Geoffrey Hinton},
