--- a/glossary.tex
+++ b/glossary.tex
@@ -12,9 +12,9 @@
 \newacronym{NASA}{NASA}{Americký Národní úřad pro letectví a vesmír (National Aeronautics and Space Administration)}
 \newacronym{fMRI}{fMRI}{Funkční magnetická rezonance}
 \newacronym{EKG}{EKG}{Elektrokardiografie}
-\newacronym{RSP}{RSP}{Respirace}
+\newacronym{RSP}{RSP}{Respirační aktvitita}
 \newacronym{EDA}{EDA}{Elektrodermální aktivita}
-\newacronym{EVA}{EVA}{extravehikulární aktivita}
+\newacronym{EVA}{EVA}{Extravehikulární aktivita}
 \newacronym{CSA}{CSA}{Kanadská kosmická agentura (Canadian Space Agency)}
 \newacronym{NEEMO}{NEEMO}{Operace NASA v extrémním prostředí (NASA Extreme Environment Mission Operations)}
 \newacronym{FIU}{FIU}{Mezinárodní Univerzita na Floridě (Florida International University)}
@@ -37,7 +37,6 @@
 \newacronym{UMAP}{UMAP}{Uniform Manifold Approximation and Projection}
 \newacronym{EFA}{EFA}{Faktorová analýza (Exploratory factor analysis)}
 \newacronym{DBSCAN}{DBSCAN}{Hustotní prostorové shlukování aplikací s šumem (Density-based spatial clustering of applications with noise)}
-\newacronym{HDBSCAN}{HDBSCAN}{Hierarchické hustotní prostorové shlukování aplikací s hlukem (Hierarchical density-based spatial clustering of applications with noise)}
 \newacronym{ML}{ML}{Strojové učení (Machine learning)}
 \newacronym{CV}{CV}{Křížová validace (Cross-validation)}
 \newacronym{ANN}{ANN}{Umělé neuronové sítě (Artificial neural networks)}
@@ -68,10 +67,14 @@
 \newacronym{PNS}{PNS}{Parasympatický nervový systém}
 \newacronym{FF UPOL}{FF UPOL}{Filozofická fakulta Univerzity Palackého v Olomouci}
 \newacronym{EFPA}{EFPA}{Evropská federace psychologických asociací}
-\newacronym{BOREC}{BOREC}{Body recorded}
 \newacronym{FBMI}{FBMI}{Fakulta biomedicínského inženýrství}
 \newacronym{LMM}{LMM}{Linearní smíšené modely (Linear mixed models)}
 \newacronym{GC}{GC}{Grangerova kauzalita (Granger causality)}
 \newacronym{CP}{CP}{Capula Granger}
 \newacronym{GAF}{GAF}{Gramian angular fields}
 \newacronym{GADF}{GADF}{Gramian angular difference fields}
+\newacronym{EDR}{EDR}{Respirace odvozená z EKG (ECG-Derived Respiration)}
+\newacronym{VAR}{VAR}{Model vektorové autoregrese (Vector autoregressive model)}
+\newacronym{CDF}{CDF}{Kumulativní distribuční funkce (Cumulative distribution function)}
+\newacronym{AIC}{AIC}{Akaikeho informační kritérium (Akaike information criterion)}
+\newacronym{Lasso}{Lasso}{Least absolute shrinkage and selection operator}
