--- a/library.bib
+++ b/library.bib
@@ -2681,22 +2681,261 @@
   year      = {2018}
 }
 
-
-
-
-
-
-@article{tsne2008,
-  author  = {Laurens van der Maaten and Geoffrey Hinton},
-  journal = {Journal of Machine Learning Research},
-  number  = {86},
-  pages   = {2579--2605},
-  title   = {Visualizing Data using t-SNE},
-  url     = {http://jmlr.org/papers/v9/vandermaaten08a.html},
-  urldate = {2021-06-24},
-  volume  = {9},
-  year    = {2008}
+@article{Castaldo2019,
+  author  = {Castaldo, R. and Montesinos, L. and Melillo, P. and James, C. and Pecchia, L.},
+  doi     = {10.1186/s12911-019-0742-y},
+  issn    = {1472-6947},
+  journal = {BMC Medical Informatics and Decision Making},
+  month   = {Jan},
+  number  = {1},
+  pages   = {12},
+  title   = {Ultra-short term HRV features as surrogates of short term HRV: a case study on mental stress detection in real life},
+  volume  = {19},
+  year    = {2019}
 }
+
+@article{Kim2021,
+  author  = {Kim, Jin Woong and Seok, Hyeon Seok and Shin, Hangsik},
+  issn    = {1664-042X},
+  journal = {Frontiers in Physiology},
+  title   = {Is Ultra-Short-Term Heart Rate Variability Valid in Non-static Conditions?},
+  url     = {https://www.frontiersin.org/articles/10.3389/fphys.2021.596060},
+  volume  = {12},
+  year    = {2021}
+}
+
+@article{Pecchia2018,
+  author  = {Pecchia, Leandro and Castaldo, Rossana and Montesinos, Luis and Melillo, Paolo},
+  doi     = {10.1049/htl.2017.0090},
+  issn    = {2053-3713},
+  journal = {Healthcare Technology Letters},
+  number  = {3},
+  pages   = {94–100},
+  title   = {Are ultra-short heart rate variability features good surrogates of short-term ones? State-of-the-art review and recommendations},
+  volume  = {5},
+  year    = {2018}
+}
+
+@article{Shaffer2020,
+  author  = {Shaffer, Fred and Meehan, Zachary M. and Zerr, Christopher L.},
+  issn    = {1662-453X},
+  journal = {Frontiers in Neuroscience},
+  title   = {A Critical Review of Ultra-Short-Term Heart Rate Variability Norms Research},
+  url     = {https://www.frontiersin.org/articles/10.3389/fnins.2020.594880},
+  volume  = {14},
+  year    = {2020}
+}
+
+@article{Tervonen2021,
+  author    = {Tervonen, Jaakko and Pettersson, Kati and Mäntyjärvi, Jani},
+  doi       = {10.3390/electronics10050613},
+  issn      = {2079-9292},
+  journal   = {Electronics},
+  month     = {Jan},
+  number    = {55},
+  pages     = {613},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  rights    = {http://creativecommons.org/licenses/by/3.0/},
+  title     = {Ultra-Short Window Length and Feature Importance Analysis for Cognitive Load Detection from Wearable Sensors},
+  volume    = {10},
+  year      = {2021}
+}
+
+@article{Zhao2018,
+  author  = {Zhao, Zhidong and Zhang, Yefei},
+  issn    = {1664-042X},
+  journal = {Frontiers in Physiology},
+  title   = {SQI Quality Evaluation Mechanism of Single-Lead ECG Signal Based on Simple Heuristic Fusion and Fuzzy Comprehensive Evaluation},
+  url     = {https://www.frontiersin.org/articles/10.3389/fphys.2018.00727},
+  volume  = {9},
+  year    = {2018}
+}
+
+@article{VanGent2019,
+  author  = {van Gent, Paul and Farah, Haneen and van Nes, Nicole and van Arem, Bart},
+  doi     = {10.1016/j.trf.2019.09.015},
+  issn    = {1369-8478},
+  journal = {Transportation Research Part F: Traffic Psychology and Behaviour},
+  month   = {Oct},
+  pages   = {368–378},
+  title   = {HeartPy: A novel heart rate algorithm for the analysis of noisy signals},
+  volume  = {66},
+  year    = {2019}
+}
+
+@book{Schindler2013,
+  author = {Schindler, Katerina},
+  month  = {Sep},
+  title  = {Granger Lasso Causal Models in Higher Dimensions - Application to Gene Expression Regulatory Networks},
+  year   = {2013}
+}
+
+@book{Guy2016,
+  edition   = {Softcover reprint of the original 1st ed. 2015 edition},
+  isbn      = {978-3-319-35020-2},
+  month     = {Oct},
+  publisher = {Springer},
+  title     = {Decision Making: Uncertainty, Imperfection, Deliberation and Scalability},
+  year      = {2016}
+}
+
+@article{Bahdori2012,
+  author    = {Liu, Yan and Bahadori, Taha and Li, Hongfei},
+  doi       = {10.48550/arXiv.1206.4685},
+  month     = {Jun},
+  number    = {arXiv:1206.4685},
+  publisher = {arXiv},
+  title     = {Sparse-GEV: Sparse Latent Space Model for Multivariate Extreme Value Time Serie Modeling},
+  url       = {http://arxiv.org/abs/1206.4685},
+  year      = {2012}
+}
+
+@article{Wang2015,
+  author    = {Wang, Zhiguang and Oates, Tim},
+  doi       = {10.48550/arXiv.1506.00327},
+  month     = {May},
+  number    = {arXiv:1506.00327},
+  publisher = {arXiv},
+  title     = {Imaging Time-Series to Improve Classification and Imputation},
+  url       = {http://arxiv.org/abs/1506.00327},
+  year      = {2015}
+}
+
+@article{Zhou2021,
+  author    = {Zhou, Houliang and Kan, Chen},
+  doi       = {10.3390/s21124173},
+  issn      = {1424-8220},
+  journal   = {Sensors},
+  month     = {1},
+  number    = {1212},
+  pages     = {4173},
+  publisher = {Multidisciplinary Digital Publishing Institute},
+  rights    = {http://creativecommons.org/licenses/by/3.0/},
+  title     = {Tensor-Based ECG Anomaly Detection toward Cardiac Monitoring in the Internet of Health Things},
+  volume    = {21},
+  year      = {2021}
+}
+
+
+
+
+@article{Mazzia2021,
+  author    = {Mazzia, Vittorio and Salvetti, Francesco and Chiaberge, Marcello},
+  doi       = {10.1038/s41598-021-93977-0},
+  issn      = {2045-2322},
+  journal   = {Scientific Reports},
+  month     = {Jul},
+  number    = {11},
+  pages     = {14634},
+  publisher = {Nature Publishing Group},
+  rights    = {2021 The Author(s)},
+  title     = {Efficient-CapsNet: capsule network with self-attention routing},
+  volume    = {11},
+  year      = {2021}
+}
+
+@inproceedings{Hinton2011,
+  address    = {Berlin, Heidelberg},
+  author     = {Hinton, Geoffrey E. and Krizhevsky, Alex and Wang, Sida D.},
+  booktitle  = {Artificial Neural Networks and Machine Learning – ICANN 2011},
+  collection = {Lecture Notes in Computer Science},
+  doi        = {10.1007/978-3-642-21735-7_6},
+  editor     = {Honkela, Timo and Duch, Włodzisław and Girolami, Mark and Kaski, Samuel},
+  isbn       = {978-3-642-21735-7},
+  pages      = {44–51},
+  publisher  = {Springer},
+  series     = {Lecture Notes in Computer Science},
+  title      = {Transforming Auto-Encoders},
+  year       = {2011}
+}
+
+
+@article{Granger1969,
+  author    = {Granger, C. W. J.},
+  doi       = {10.2307/1912791},
+  issn      = {0012-9682},
+  journal   = {Econometrica},
+  number    = {3},
+  pages     = {424–438},
+  publisher = {[Wiley, Econometric Society]},
+  title     = {Investigating Causal Relations by Econometric Models and Cross-spectral Methods},
+  volume    = {37},
+  year      = {1969}
+}
+
+@inproceedings{Arnold2007,
+  address    = {New York, NY, USA},
+  author     = {Arnold, Andrew and Liu, Yan and Abe, Naoki},
+  booktitle  = {Proceedings of the 13th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  collection = {KDD ’07},
+  doi        = {10.1145/1281192.1281203},
+  isbn       = {978-1-59593-609-7},
+  pages      = {66–75},
+  publisher  = {Association for Computing Machinery},
+  series     = {KDD ’07},
+  title      = {Temporal causal modeling with graphical granger methods},
+  url        = {https://doi.org/10.1145/1281192.1281203},
+  year       = {2007}
+}
+
+@article{Tibshirani1996,
+  author  = {Tibshirani, Robert},
+  doi     = {10.1111/j.2517-6161.1996.tb02080.x},
+  issn    = {2517-6161},
+  journal = {Journal of the Royal Statistical Society: Series B (Methodological)},
+  number  = {1},
+  pages   = {267–288},
+  title   = {Regression Shrinkage and Selection Via the Lasso},
+  volume  = {58},
+  year    = {1996}
+}
+
+@inbook{Bahadori2013,
+  author     = {Bahadori, Mohammad Taha and Liu, Yan},
+  booktitle  = {Proceedings of the 2013 SIAM International Conference on Data Mining (SDM)},
+  collection = {Proceedings},
+  doi        = {10.1137/1.9781611972832.52},
+  isbn       = {978-1-61197-262-7},
+  month      = {May},
+  pages      = {467–475},
+  publisher  = {Society for Industrial and Applied Mathematics},
+  series     = {Proceedings},
+  title      = {An Examination of Practical Granger Causality Inference},
+  url        = {https://epubs.siam.org/doi/10.1137/1.9781611972832.52},
+  year       = {2013}
+}
+
+
+
+
+@inproceedings{Yong2023,
+  address    = {Cham},
+  author     = {Yong, Zirui and Su, Guoxin and Li, Xiaohu and Sun, Lingyun and Li, Zejian and Li, Liu},
+  booktitle  = {Machine Learning and Knowledge Discovery in Databases},
+  collection = {Lecture Notes in Computer Science},
+  doi        = {10.1007/978-3-031-26422-1_20},
+  editor     = {Amini, Massih-Reza and Canu, Stéphane and Fischer, Asja and Guns, Tias and Kralj Novak, Petra and Tsoumakas, Grigorios},
+  isbn       = {978-3-031-26422-1},
+  pages      = {318–334},
+  publisher  = {Springer Nature Switzerland},
+  series     = {Lecture Notes in Computer Science},
+  title      = {Recognizing Cognitive Load by a Hybrid Spatio-Temporal Causal Model from Multivariate Physiological Data},
+  year       = {2023}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @misc{umap2018,
   author    = {McInnes, Leland and Healy, John and Melville, James},
